--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="Design/FullLogo.png" class="logo">
 
         <ul>
-            <li><a href="WebSite.html">HOME</a></li>  <!-- Link back to Home -->
+            <li><a href="index.html">HOME</a></li>  <!-- Link back to Home -->
             <li><a href="#">PORTFOLIO</a></li>
             <li><a href="aboutMe.html">ABOUT ME</a></li>  <!-- You are on About Me -->
             <li><a href="#">CONTACT</a></li>
@@ -34,7 +34,7 @@
     <div class="container">
         <nav>
             <ul class="pages">
-                <li><a href="WebSite.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="aboutMe.html">ABOUT ME</a></li>
                 <li><a href="portfolio.html">PORTFOLIO</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
