--- a/index.html
+++ b/index.html
@@ -3,30 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CARLOS STENERT PHOTOGRAPHY WEBSITE</title>
+    <title>CARLOS STENERT</title>
     <link rel="stylesheet" href="Style.css">
 </head>
-<body style="background-color: rgb(244, 243, 227);">
+<body style="background-color: rgb(135, 173, 188);"> 
+    <!-- 244, 243, 227  -->
 
     <nav>
         <img src="Design/FullLogo.png" class="logo">
-
-        <ul>
-            <li><a href="index.html">HOME</a></li>  <!-- Link back to Home -->
-            <li><a href="#">PORTFOLIO</a></li>
-            <li><a href="aboutMe.html">ABOUT ME</a></li>  <!-- You are on About Me -->
-            <li><a href="#">CONTACT</a></li>
+    
+        <ul class="pages">
+            <li class="dropdown">
+                <a href="index.html">PORTFOLIO</a>
+                <ul class="dropdown-content">
+                    <li><a href="#">B&W</a></li>
+                    <li><a href="#">ARCHITECTURE</a></li>
+                    <li><a href="#">PEOPLE</a></li>
+                    <li><a href="#">NATURE</a></li>
+                </ul>
+            </li>
+            <li><a href="aboutMe.html">ABOUT</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
+    
 
-   
 
     <nav class="image-container">
-        <img src="Images/DSC_1190.jpg" class="picture2">
-        <img src="Images/DSC_1329.jpg" class="picture3">
-        <img src="Images/DSC_1150.jpg" class="picture4">
-        <img src="Images/DSC_1110.jpg" class="picture5">
-        <img src="Images/DSC_0966C.JPG" class="picture1">
+        <img src="Images/B&W/DSC_0929 copy.jpg" class="picture1">
+        <img src="Images/Architecture/DSC_1329 RED.jpg" class="picture2">
+        <img src="Images/Street/DSC_1150 copy.jpg" class="picture3">
+        <img src="Images/Nature/DSC_0769yellow.jpg" class="picture4">
     </nav>
 
     <!-- Social Media Links -->
@@ -34,9 +41,8 @@
     <div class="container">
         <nav>
             <ul class="pages">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="aboutMe.html">ABOUT ME</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
+                <li><a href="index.html">PORTFOLIO</a></li>
+                <li><a href="aboutMe.html">ABOUT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
