--- a/aboutMe.html
+++ b/aboutMe.html
@@ -6,13 +6,12 @@
     <title>About Me - Carlos Stenert</title>
     <link rel="stylesheet" href="Style.css"> <!-- Use the same CSS file -->
 </head>
-<body style="background-color: rgb(244, 243, 227);">
+<body style="background-color: rgb(135, 173, 188);">
     <nav>
         <img src="Design/FullLogo.png" class="logo">
         <ul>
-            <li><a href="index.html">HOME</a></li>  <!-- Link back to Home -->
-            <li><a href="#">PORTFOLIO</a></li>
-            <li><a href="aboutMe.html">ABOUT ME</a></li>  <!-- You are on About Me -->
+            <li><a href="index.html">PORTFOLIO</a></li>  <!-- Link back to Home -->
+            <li><a href="aboutMe.html">ABOUT</a></li>  <!-- You are on About Me -->
             <li><a href="#">CONTACT</a></li>
         </ul>
     </nav>
@@ -21,13 +20,19 @@
         <div class="about-block">
             <img src="Images/DSC_0890.JPG" alt="Image Description" class="about-image">
             <p class="about-text"> Hello there, I'm Carlos! Originally from Brazil, I've been living in Portugal for the past three 
-                years. In 2024, I discovered a passion for photography and photo editing, and I decided to create this website 
-                as a way to showcase my work and what I love doing! 
+                years. Currently majoring in Business, but in 2024, I discovered a new passion: photography and photo editing.
+                 Combining this with some coding knowledge, I dicided to create this website from scratch as I thought it would be a
+                 fun way to showcase my work and share what I love doing! 
                  </p>
         </div>
 
         <div class="about-block">
-            <p class="about-text">This is the second paragraph about your work.</p>
+            <p class="about-text">I've always loved taking pictures, but they were always with my phone. 
+                That all changed when I found a family camera that wasn't used very often. At the time, I was on vacation in 
+                Brazil and decided to bring the Nikon camera back to Portugal. While waiting for college to start, 
+                I decided to take the camera for a spin and went to the center of Lisbon to take some photos. While I love 
+                taking every tye of picture, going to the city center made me realize how much I enjoy street 
+                photography—capturing candid moments of strangers in their everyday lives.</p>
             <img src="path/to/image2.jpg" alt="Image Description" class="about-image">
         </div>
     
@@ -39,9 +44,8 @@
     <div class="container">
         <nav>
             <ul class="pages">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="aboutMe.html">ABOUT ME</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
+                <li><a href="index.html">PORTFOLIO</a></li>
+                <li><a href="aboutMe.html">ABOUT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
