--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <nav class="image-container">
         <img src="Images/B&W/DSC_0929 copy.jpg" class="picture1">
-        <img src="Images/Architecture/DSC_1329 RED.jpg" class="picture2">
+        <img src="Images/Architecture/DSC_1329 copy.jpg" class="picture2">
         <img src="Images/Street/DSC_1150 copy.jpg" class="picture3">
         <img src="Images/Nature/DSC_0769yellow.jpg" class="picture4">
     </nav>
