--- a/aboutMe.html
+++ b/aboutMe.html
@@ -46,7 +46,7 @@
     </nav>
 
     <div class="about-container">
-        <img src="Images/DSC_0890.JPG" alt="Image of Carlos" class="about-image">
+        <img src="Images/DSC_0890.jpg" alt="Image of Carlos" class="about-image">
         <div class="about-text">
             <div class="text-row">
                 <div class="text-section">
