--- a/aboutMe.html
+++ b/aboutMe.html
@@ -51,7 +51,7 @@
             <div class="text-row">
                 <div class="text-section">
                     <h2>A Little Bit About Me</h2>
-                    <p>Hi there, I'm Carlos! Originally from Brazil, I've been embracing life in Portugal for the past three years while pursuing my college degree in business. My passion for photography spans various styles, but it's street photography that truly fuels my creativity and inspires me to capture the vibrant stories of everyday life.</p>
+                    <p>Hi there, I'm Carlos! Originally from Brazil, I've been embracing life in Portugal for the past three years while pursuing a bachelor's degree in Business. My passion for photography spans various styles, but it's street photography that truly fuels my creativity and inspires me to capture the vibrant stories of everyday life.</p>
                 </div>
                 <div class="text-section">
                     <h2>My Passions</h2>
@@ -64,7 +64,7 @@
                     <p>I've always loved taking pictures as a way to capture moments and hold onto them forever, but until recently, I had only used my phone. In 2024, while visiting my parents in Brazil, I discovered an old Nikon camera bought while we were living in Japan, hiding in the closet and decided to bring it back with me to Lisbon. Before my college classes began, I ventured into the city center to give the camera a try. That’s when I discovered my new passion: photography. Along with this newfound love, my interest in Photoshop and photo editing grew, prompting me to learn these skills and incorporate them into my journey.</p>                
                 </div>
                 <div class="text-section">
-                    <h2>Building this website</h2>
+                    <h2>Building this site</h2>
                     <p>With these new passions, I began to think of ways to showcase my talent. Before creating this website, I posted all my photos on Instagram, which was enjoyable, but I wanted a special place to display some of my best work. That’s when I decided to learn a bit of HTML and CSS to build my personal website. I hope to make it more elaborate in the future, but this was already a significant step. If you’re interested in my work, you can click on the portfolio section to see the different albums. Additionally, if you’d like to collaborate, feel free to reach out through any of my social media links at the bottom of the page!</p>                
                 </div>
             </div>
